--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8"
+    "@typescript-eslint/parser": "^5.59.8",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
