--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "20.1.1",
@@ -29,7 +30,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
-    "cz-conventional-changelog": "^3.3.0"
+    "cz-conventional-changelog": "^3.3.0",
+    "prisma": "^4.15.0"
   },
   "config": {
     "commitizen": {
