--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: initialise Prisma database
+        run: prisma generate
+
       - name: Run NextJS build
         run: npm run build
