--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,7 @@
             "error",
             "always"
         ],
-        "@next/next/no-img-element": "off"
+        "@next/next/no-img-element": "off",
+        "no-useless-escape": "off"
     }
 }
