--- a/package.json
+++ b/package.json
@@ -14,19 +14,25 @@
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.4.1",
+    "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.1",
+    "next-recaptcha-v3": "^1.1.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
