--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "@types/react-dom": "18.2.4",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
-    "eslint": "^8.40.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
-    "next": "13.4.1",
+    "next": "^13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,10 +34,12 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.50.0",
     "prisma": "^4.15.0"
   },
   "config": {
