--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "db": "json-server --watch ../db.json --port 8000"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.15.0",
-    "@radix-ui/react-accordion": "^1.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.1.1",
@@ -21,15 +20,20 @@
     "@types/react-dom": "18.2.4",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
-    "next": "^13.3.4",
+    "lucide-react": "^0.282.0",
+    "next": "^13.5.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
