--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
@@ -26,11 +27,12 @@
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.282.0",
-    "next": "^13.5.3",
-    "postcss": "8.4.23",
+    "next": "^14.0.1",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-responsive": "^9.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
