--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
