--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
