--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db": "json-server --watch ../db.json --port 8000"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.9",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -27,6 +28,7 @@
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
     "lucide-react": "^0.282.0",
+    "negotiator": "^1.0.0",
     "next": "^14.0.1",
     "pm2": "^5.4.3",
     "postcss": "^8.4.31",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/negotiator": "^0.6.3",
     "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
