--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@sendgrid/mail": "^8.1.4",
     "@types/node": "20.1.1",
