--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -30,6 +31,7 @@
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.1",
     "framer-motion": "^10.12.16",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.282.0",
     "negotiator": "^1.0.0",
     "next": "^14.0.1",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/negotiator": "^0.6.3",
     "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
